[package]
name = "tosspayments-rs"
description = "API bindings for the Tosspayments HTTP API"
version = "0.1.1"
edition = "2021"
rust-version = "1.68.0"
readme = "README.md"
authors = [
  "Seokju Na <seokju.me@gmail.com>"
]
license = "MIT"
homepage = "https://github.com/seokju-na/tosspayments-rs"
repository = "https://github.com/seokju-na/tosspayments-rs"
documentation = "https://docs.rs/tosspayments-rs"
keywords = ["tosspayments", "api", "async"]
categories = ["api-bindings"]

[lib]
name = "tosspayments"

[dependencies]
thiserror = "1.0.50"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = {version = ">=1.0.79", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12.0"
base64 = "0.21"
tokio = "1.34"

[dev-dependencies]
httpmock = "0.6"
tokio = { version = "1.34", features = ["full"] }
