[package]
name = "tosspayments-rs"
description = "API bindings for the Tosspayments HTTP API"
version = "0.2.0"
edition = "2021"
rust-version = "1.70.0"
readme = "README.md"
authors = [
  "Seokju Na <seokju.me@gmail.com>"
]
license = "MIT"
homepage = "https://github.com/seokju-na/tosspayments-rs"
repository = "https://github.com/seokju-na/tosspayments-rs"
documentation = "https://docs.rs/tosspayments-rs"
keywords = ["tosspayments", "api", "async"]
categories = ["api-bindings"]

[lib]
name = "tosspayments"

[dependencies]
thiserror = "^1"
reqwest = { version = "^0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = {version = ">=1.0.79", features = ["derive"] }
serde_json = "1.0"
serde_qs = "^0.13"
base64 = "^0.22"
tokio = "^1.40"
convert_case = "^0.6"
typed-builder = "^0.20"

[dev-dependencies]
httpmock = "0.7.0"
tokio = { version = "1.40", features = ["full"] }
